<?xml version="1.0"?>
<package format="2">
  <name>loki_demos</name>
  <version>0.0.2</version>
  <description>The loki_demos package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>loki_bringup</exec_depend>
  <exec_depend>loki_nav</exec_depend>
  <exec_depend>loki_teleop</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tf2_web_republisher</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
