<?xml version="1.0"?>
<package format="2">
  <name>loki_description</name>
  <version>0.0.1</version>
  <description>The loki_description package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export></export>
</package>
