<?xml version="1.0"?>
<package format="2">
  <name>loki_robot</name>
  <version>0.0.1</version>
  <description>Metapackage for loki configuration</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <author email="send2arohan@gmail.com">Rohan Agrawal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>loki_bringup</exec_depend>
  <exec_depend>loki_demos</exec_depend>
  <exec_depend>loki_description</exec_depend>
  <exec_depend>loki_nav</exec_depend>
  <exec_depend>loki_teleop</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
